some basic setup

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,35 @@
 {
+  // All values in AppSettings should be strings
+  "AppSettings": {
+    // The title of the console window, default is "Intelligent Document Processing and Analysis API"
+    "CONSOLE_TITLE": "Intelligent Document Processing and Analysis API",
+    // The IP address of the HTTP API, default is 127.0.0.1
+    "HTTP_API_IP": "127.0.0.1",
+    // The port of the HTTP API, default is 7015
+    "HTTP_API_PORT": "7015",
+    // Whether to disable the quick edit mode of the console window or not, default is true
+    "DISABLE_CONSOLE_QUICK_EDIT_MODE": "true",
+    // Whether to write verbose logs to a file or not, default is false
+    "ENABLE_VERBOSE_LOGS_TO_FILE": "false",
+    // Whether to write debug logs to a file or not, default is false
+    "ENABLE_DEBUG_LOGS_TO_FILE": "false",
+    // Whether to write information logs to a file or not, default is false
+    "ENABLE_INFORMATION_LOGS_TO_FILE": "false",
+    // Whether to enable Swagger UI or not, default is true
+    "ENABLE_SWAGGER": "true"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "None"
     }
   },
   "AllowedHosts": "*"
