--- a/Intelligent-Document-Processing-and-Analysis-API.csproj
+++ b/Intelligent-Document-Processing-and-Analysis-API.csproj
@@ -1,11 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Intelligent_Document_Processing_and_Analysis_API</RootNamespace>
+	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	<AssemblyVersion>24.6.1.0</AssemblyVersion>
+	<FileVersion>24.6.1.0</FileVersion>
+	<ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="favicon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
