--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5100",
+      "applicationUrl": "http://127.0.0.1:7015",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7243;http://localhost:5100",
+      "applicationUrl": "https://127.0.0.1:7014;http://127.0.0.1:7015",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
