--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,8 @@
   "AppSettings": {
     // The title of the console window, default is "Intelligent Document Processing and Analysis API"
     "CONSOLE_TITLE": "Intelligent Document Processing and Analysis API",
+    // The connection string to the SQLite database, default is "Data Source=SQLite.db"
+    "SQLITE_CONNECTION_STRING": "Data Source=SQLite.db",
     // The IP address of the HTTP API, default is 127.0.0.1
     "HTTP_API_IP": "127.0.0.1",
     // The port of the HTTP API, default is 7015
