--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,10 @@
     "CONSOLE_TITLE": "Intelligent Document Processing and Analysis API",
     // The connection string to the SQLite database, default is "Data Source=Data/SQLite.db"
     "SQLITE_CONNECTION_STRING": "Data Source=Data/SQLite.db",
+    // The IP address of the LLM HTTP API, default is localhost
+    "LLM_HTTP_API_IP": "localhost",
+    // The port of the LLM HTTP API, default is 1234
+    "LLM_HTTP_API_PORT": "1234",
     // The IP address of the HTTP API, default is 127.0.0.1
     "HTTP_API_IP": "127.0.0.1",
     // The port of the HTTP API, default is 7015
