--- a/appsettings.json
+++ b/appsettings.json
@@ -9,10 +9,14 @@
     "LLM_HTTP_API_IP": "localhost",
     // The port of the LLM HTTP API, default is 1234
     "LLM_HTTP_API_PORT": "1234",
+    // The completion endpoint of the LLM API, default is "/v1/chat/completions"
+    "LLM_COMPLETION_ENDPOINT": "/v1/chat/completions",
     // The IP address of the HTTP API, default is 127.0.0.1
     "HTTP_API_IP": "127.0.0.1",
     // The port of the HTTP API, default is 7015
     "HTTP_API_PORT": "7015",
+    // The timeout of the completion HTTP client in seconds, default is 180
+    "COMPLETION_HTTP_CLIENT_TIMEOUT": 180,
     // Whether to disable the quick edit mode of the console window or not, default is true
     "DISABLE_CONSOLE_QUICK_EDIT_MODE": "true",
     // Whether to write verbose logs to a file or not, default is false
