--- a/Intelligent-Document-Processing-and-Analysis-API.csproj
+++ b/Intelligent-Document-Processing-and-Analysis-API.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\" />
+    <Folder Include="CompletionRequests\" />
     <Folder Include="Data\" />
   </ItemGroup>
 
