--- a/Intelligent-Document-Processing-and-Analysis-API.csproj
+++ b/Intelligent-Document-Processing-and-Analysis-API.csproj
@@ -39,8 +39,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="CompletionRequests\" />
     <Folder Include="Data\" />
+    <Folder Include="LOGS\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Uploads\" />
   </ItemGroup>
 
